# SEAL

./: .gitmodules  README.md
SEAL_HybVIO/: .gitignore  README.md
SEAL_HybVIO/HybVIO/: .gitignore  CMakeLists.txt
SEAL_HybVIO/HybVIO/SEAL/: CMakeLists.txt
SEAL_HybVIO/HybVIO/SEAL/include/: SEALConfigBuilder.hpp
SEAL_HybVIO/HybVIO/SEAL/include/keypoint_tracking/: KeypointTracker.hpp  gradients.hpp  pyramids.hpp
SEAL_HybVIO/HybVIO/SEAL/include/temporal_processing/: TemporalProcessor.hpp
SEAL_HybVIO/HybVIO/SEAL/opencv_internal/include/: ScharrDerivInvoker.hpp  pyramids.hpp
SEAL_HybVIO/HybVIO/SEAL/opencv_internal/src/: LKTrackerInvoker.cpp  corner.cpp
SEAL_HybVIO/HybVIO/SEAL/src/: SEALConfigBuilder.cpp  main.cpp
SEAL_HybVIO/HybVIO/SEAL/src/keypoint_tracking/: SparsePyrLKOpticalFlowSealImpl.cpp
SEAL_HybVIO/HybVIO/SEAL/src/types/: DenoiserTypes.cpp  GFTTCornerDerivativeTypes.cpp
SEAL_HybVIO/HybVIO/SEAL/table11_edges/: seal_params_edge_17.yaml  seal_params_edge_18.yaml  seal_params_edge_21.yaml  seal_params_edge_22.yaml  seal_params_edge_24.yaml  seal_params_edge_30.yaml
SEAL_HybVIO/HybVIO/SEALPowerEmulator/: CMakeLists.txt  SEALPowerEmulator.cpp  SEALPowerEmulator.hpp
SEAL_HybVIO/HybVIO/codegen/: cmd_parameter_definitions.json  parameter_definitions.c
SEAL_HybVIO/HybVIO/src/commandline/: main.cpp  parameters.hpp  video_input.cpp
SEAL_HybVIO/HybVIO/src/odometry/: backend.cpp  parameters.hpp
SEAL_HybVIO/HybVIO/src/tracker/: feature_detector.cpp  feature_detector.hpp  feature_detector_legacy.cpp  image_pyramid.cpp  optical_flow.cpp  tracker.cpp  tracker.hpp
SEAL_HybVIO/HybVIO/src/util/: global_seal.cpp  global_seal.hpp  util.cpp
SEAL_HybVIO/docker/: Dockerfile  README.md  docker_helper.sh
SEAL_HybVIO/scripts/: README.md  download_euroc.py  run_hybvio_accuracy.py  run_hybvio_latency.sh  run_hybvio_power.sh  table10.py  table11.py
SEAL_HybVIO/scripts/accuracy/: EVOMetricsCalculator.py  HybVIOExecutor.py  OriginalHybVIOMetricsCalculator.py  README.md  SequenceRunner.py  __init__.py
SEAL_HybVIO/scripts/latency/: README.md  VIOBackendMeasurement.py  VIOExperiment.py  VIOExperimentFactory.py  VIOFrontendMeasurements.py  __init__.py  parse_output_latency.py
SEAL_HybVIO/scripts/power/: PowerExperiment.py  README.md  __init__.py  precompute_optical_flow.py
SEAL_HybVIO/scripts/utils/: BenchmarkConverter.py  EurocDatasetManager.py  README.md  __init__.py  jsonl_types.py
SEAL_Optical_Flow/: .gitignore  CMakeLists.txt  README.md
SEAL_Optical_Flow/SEAL/: seal_params.yaml
SEAL_Optical_Flow/SEAL/include/: SEALConfig.hpp
SEAL_Optical_Flow/SEAL/include/keypoint_detection/: corner.hpp  gftt.hpp  gradients.hpp
SEAL_Optical_Flow/SEAL/include/keypoint_tracking/: PyrDownInvoker.hpp  SparsePyrLKOpticalFlowSealImpl.hpp
SEAL_Optical_Flow/SEAL/include/types/: LKSpatialDerivativeTypes.hpp
SEAL_Optical_Flow/SEAL/opencv_internal/: CMakeLists.txt
SEAL_Optical_Flow/SEAL/opencv_internal/include/: gftt.hpp
SEAL_Optical_Flow/SEAL/opencv_internal/src/: ScharrDerivInvoker.cpp
SEAL_Optical_Flow/SEAL/src/: SEALProcessor.cpp
SEAL_Optical_Flow/SEAL/src/keypoint_detection/: KeypointDetector.cpp  corner.cpp  gftt.cpp  gradients.cpp
SEAL_Optical_Flow/SEAL/src/keypoint_tracking/: KeypointTracker.cpp  pyramids.cpp
SEAL_Optical_Flow/SEAL/src/temporal_processing/: TemporalProcessor.cpp  edge_filter.cpp
SEAL_Optical_Flow/SEAL/src/types/: LKPyrDownFilterTypes.cpp
SEAL_Optical_Flow/docker/: Dockerfile  docker_helper.sh
SEAL_Optical_Flow/scripts/: calculate_table_results.py  download_hd1k.sh
SEAL_Optical_Flow/src/: main.cpp
SEAL_VINS_Mono/: .gitignore  README.md
SEAL_VINS_Mono/SEAL/: .gitignore  CMakeLists.txt
SEAL_VINS_Mono/SEAL/cmake/: sealConfig.cmake.in
SEAL_VINS_Mono/SEAL/include/seal/: SEALConfig.hpp  SEALConfigBuilder.hpp  SEALProcessor.hpp
SEAL_VINS_Mono/SEAL/include/seal/keypoint_detection/: KeypointDetector.hpp  corner.hpp  gftt.hpp
SEAL_VINS_Mono/SEAL/include/seal/keypoint_tracking/: KeypointTracker.hpp  PyrDownInvoker.hpp  SparsePyrLKOpticalFlowSealImpl.hpp  gradients.hpp  pyramids.hpp
SEAL_VINS_Mono/SEAL/include/seal/temporal_processing/: denoise.hpp  edge_filter.hpp
SEAL_VINS_Mono/SEAL/include/seal/types/: DenoiserTypes.hpp  GFTTCornerDerivativeTypes.hpp  LKPyrDownFilterTypes.hpp
SEAL_VINS_Mono/SEAL/opencv_internal/: CMakeLists.txt
SEAL_VINS_Mono/SEAL/opencv_internal/include/opencv_internal/: LKTrackerInvoker.hpp  ScharrDerivInvoker.hpp  corner.hpp
SEAL_VINS_Mono/SEAL/opencv_internal/src/: LKTrackerInvoker.cpp  ScharrDerivInvoker.cpp
SEAL_VINS_Mono/SEAL/src/: SEALConfigBuilder.cpp  SEALProcessor.cpp
SEAL_VINS_Mono/SEAL/src/keypoint_tracking/: KeypointTracker.cpp  SparsePyrLKOpticalFlowSealImpl.cpp  gradients.cpp  pyramids.cpp
SEAL_VINS_Mono/SEAL/src/temporal_processing/: denoise.cpp
SEAL_VINS_Mono/SEAL/src/types/: LKSpatialDerivativeTypes.cpp
SEAL_VINS_Mono/docker/: Dockerfile  README.md  docker_helper.sh
SEAL_VINS_Mono/scripts/: README.md  download_euroc_bag.sh  run_vins_accuracy.py  table10.py
SEAL_VINS_Mono/scripts/accuracy/: VINSMetricsCalculator.py  VINSMonoExecutor.py  VINSSequenceRunner.py  __init__.py
SEAL_VINS_Mono/src/VINS-Mono/config/SEALparams/: seal_params.yaml  seal_params_vins.yaml
SEAL_VINS_Mono/src/VINS-Mono/config/euroc/: euroc_config.yaml
SEAL_VINS_Mono/src/VINS-Mono/feature_tracker/: CMakeLists.txt
SEAL_VINS_Mono/src/VINS-Mono/feature_tracker/src/: feature_tracker.cpp  feature_tracker.h  feature_tracker_node.cpp
SEAL_VINS_Mono/src/VINS-Mono/seal_temporal_processor/: CMakeLists.txt  package.xml
SEAL_VINS_Mono/src/VINS-Mono/seal_temporal_processor/include/: temporal_processor_node.hpp
SEAL_VINS_Mono/src/VINS-Mono/seal_temporal_processor/src/: temporal_processor_node.cpp
SEAL_VINS_Mono/src/VINS-Mono/vins_estimator/launch/: euroc.launch
